--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -7,6 +7,10 @@ body {
 	@apply font-sans font-normal;
 }
 
+.sidebar-section {
+	@apply flex flex-col gap-4 items-center;
+}
+
 @layer base {
 	:root {
 		--background: 0 0% 100%;
