--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -11,6 +11,10 @@ body {
 	@apply flex flex-col items-center;
 }
 
+.menu-hover {
+	@apply hover:bg-slate-200 dark:hover:bg-slate-800 p-3 rounded-lg transition-colors;
+}
+
 @layer base {
 	:root {
 		--background: 0 0% 100%;
