feat: added theme change

--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -7,12 +7,21 @@ body {
 	@apply font-sans font-normal;
 }
 
+* {
+	@apply transition-colors duration-75;
+}
+
 .sidebar-section {
 	@apply flex flex-col items-center;
 }
 
 .menu-hover {
 	@apply hover:bg-slate-200 dark:hover:bg-slate-800 p-3 rounded-lg transition-colors;
+}
+
+.transition-social {
+	transition-property: filter, transform;
+	transition-duration: 2s, 250ms;
 }
 
 @layer base {
